2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/jet.spad.pamphlet: Remove unnecessary variable
	name from polynomial type.

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/jet.spad.pamphlet: Fix dependency order of
	arguments.

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/interp/interop.boot: fix regression in depsys --> bootsys
	switch

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* configure.ac, src/aldor/Makefile.in: enable configuration of
	local aldor source files

2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/daase.lisp, src/interp/fname.lisp,
	src/interp/Makefile.in, src/interp/nlib.lisp,
	 src/interp/patches.lisp, src/interp/sys-pkg.lisp,
	src/interp/vmlisp.lisp, src/lisp/fricas-package.lisp:
	Remove VMLISP package.

2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-util.boot, src/interp/macros.lisp,
	src/interp/nlib.lisp, src/interp/util.lisp,
	src/interp/vmlisp.lisp: Misc cleanups.

2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: Turn on prettyprinting
	for Closure CL.

2012-01-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-output.boot: Simplify 'outputDomainConstructor'.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/presea.in, src/hyper/htsearch: Replace
	'case' by 'use_case'.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/parsing.lisp, src/interp/patches.lisp,
	src/interp/preparse.lisp: Simplify preparse.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/setq.lisp: Use DEFPARAMETER for some
	variables.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/lisp/fricas-lisp.lisp,
	src/lisp/fricas-package.lisp, src/lisp/num_gmp.lisp:
	Silence STYLE-WARNING messages when loading gmp.

2012-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/sf.spad.pamphlet,