@@ -1,5 +1,10 @@
 2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>
 
+	* src/aldor/Makefile.in, src/aldor/initlist.as: enable Matrix over
+	SemiRng+AbelianMonoid
+
+2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>
+
 	* src/algebra/jet.spad.pamphlet: Remove unnecessary variable
 	name from polynomial type.
 
